--- a/view/style.css
+++ b/view/style.css
@@ -565,3 +565,157 @@ figure.effect:hover p {
 	  color: black;
 	}
   } */
+
+  .words {
+	  color:white;
+	  line-height: 1;
+  }
+
+  .words span {
+	  font-size: 10vw;
+	  display: inline-block;
+	  animation: move 2s ease-in-out infinite;
+  }
+
+  @keyframes move{
+	  0%{
+		  transform: translate(-33%,0);
+	  }
+	  50% {
+		  text-shadow: 0 10px 30px rgba(0, 0, 0, 0.6);
+	  }
+	  100% {
+		  transform: translate(33%,0);
+	  }
+  }
+
+.words span:nth-child(2){
+	animation-delay: .5s;
+}
+.words span:nth-child(3){
+	animation-delay: 1s;
+}
+.words span:nth-child(4){
+	animation-delay: 1.5s;
+}
+.words span:nth-child(5){
+	animation-delay: 2s;
+}
+.words span:nth-child(6){
+	animation-delay: 2.5s;
+}
+
+
+/* Hamburger menu stuff */
+/* .menu{
+	height: 70px;
+	width: 70px;
+	right: 70px;
+	top: 20px;
+	text-align: center;
+	position: absolute;
+	background: white;
+	overflow: hidden;
+	transition: all 0.2s ease;
+	z-index: 999;
+}
+
+.menu.active{
+	width: calc(100% - 140px);
+}
+
+.menu.active .menucontent *{
+	opacity: 1;
+}
+
+.menu.active span i:nth-child(1){
+	transform: rotate(-45deg) translate(-50%,-50%);
+	top: 50%;
+}
+
+.menu.active span i:nth-child(2){
+	transform: translateX(-100px);
+	opacity:0;
+}
+
+.menu.active span i:nth-child(3){
+	transform: rotate(45deg) translate(-50%,-50%);
+	top:50%;
+}
+
+.menu span i{
+	position: absolute;
+	transform-origin: 50% 50%;
+	width: 45%;
+	height: 2px;
+	left: 0;
+	right: 0;
+	margin: auto;
+	background-color: #ccc;
+	transition: transform 0.3s ease, opacity 0.1s ease 0.1s;
+}
+
+.menu span i:nth-child(1){
+	top: 40%;
+}
+
+.menu span i:nth-child(2){
+	top: 50%;
+}
+
+.menu span i:nth-child(3){
+	top: 60%;
+}
+
+.menu .menucontent *{
+	opacity: 0;
+}
+
+.menu .menucontent ul li{
+	display: inline-block;
+	margin-left: 50px;
+	margin-right: 50px;
+	color: #2d3235;
+	transition: opacity 0.3s ease 0.3s;
+	cursor: pointer;
+	position: relative;
+}
+
+.menu .menucontent ul li:hover:before{
+	opacity:0.8;
+	top: 13px;
+	left: 20px;
+}
+
+.menu .menucontent ul li:hover:after{
+	opacity:0.8;
+	bottom: 13px;
+	left: -20px;
+}
+
+.menu .menucontent ul li:before, .menu .menucontent ul li:after{
+	content: "";
+	position: absolute;
+	width: 20px;
+	height: 2px;
+	background: #ccc;
+	transition: all 0.3s ease;
+}
+
+.menu .menucontent ul li:before{
+	transform: rotate(-55deg);
+	left: 60px;
+	top: -30px;
+	opacity: 0;
+	right: 0;
+	margin: auto;
+}
+
+.menu .menucontent ul li:after{
+	transform: rotate(-55deg);
+	left: -60px;
+	bottom: -30px;
+	opacity: 0;
+	right: 0;
+	margin: auto;
+} */
