--- a/view/style.css
+++ b/view/style.css
@@ -40,12 +40,12 @@ header {
 }
 
 .nav_links li a:hover {
-	color: #c28aff;
+	color: #eee;
 	text-decoration: none;
 }
 
 .nav_links li a:focus {
-	color: #c28aff;
+	color: #eee;
 	text-decoration: none;
 }
 
@@ -736,12 +736,12 @@ figure.effect:hover p {
 }
 
 .navbarBar {
-	width: 300px;
+	width: 20%;
 	height: 100%;
-	background-color: #262626d3;
+	background-color: #262626ef;
 	position: fixed;
 	top: 0;
-	right: -300px;
+	right: -20%;
 	display: flex;
 	justify-content: center;
 	align-items: center;
