--- a/view/style.css
+++ b/view/style.css
@@ -1322,7 +1322,7 @@ figure.effect:hover p {
 .loader-wrapper {
   width: 100%;
   height: 100%;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
   background-color: #1e1e1e;
