--- a/view/style.css
+++ b/view/style.css
@@ -1305,6 +1305,11 @@ figure.effect:hover p {
   }
 }
 
+@font-face {
+  src: url(view/fonts/Colombo-Sans-Font.ttf);
+  font-family: colombo;
+}
+
 .content {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1436,5 +1441,32 @@ figure.effect:hover p {
   100% {
     height: 0%;
   }
+}
+
+.resume-link {
+  display: block;
+  margin-top: 50px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.resume-link a {
+  padding: 9px 18px;
+  font-family: "Montserrat", sans-serif;
+  font-size: 12px;
+  color: white;
+  border: solid;
+  border-color: white;
+  border-width: 1px;
+  -webkit-transition: all 0.3s ease 0s;
+  transition: all 0.3s ease 0s;
+}
+
+.resume-link a:hover {
+  color: black;
+  font-weight: bold;
+  border-color: #c28aff;
+  background-color: #c28aff;
+  text-decoration: none;
 }
 /*# sourceMappingURL=style.css.map */
