--- a/view/style.scss
+++ b/view/style.scss
@@ -897,6 +897,11 @@ figure.effect:hover p {
 // 	background-color: #eee;
 //   }
 
+@font-face {
+	src: url(view/fonts/Colombo-Sans-Font.ttf);
+	font-family: colombo;
+}
+
 .content {
 	display: flex;
 	justify-content: center;
@@ -944,3 +949,33 @@ figure.effect:hover p {
 	75% { height: 100%;}
 	100% { height: 0%;}
   }
+
+  .resume-link {
+	display: block;
+	margin-top: 50px;
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.resume-link a {
+	padding: 9px 18px;
+
+	font-family: "Montserrat", sans-serif;
+	font-size: 12px;
+	color: white;
+
+	border: solid;
+	border-color: white;
+	border-width: 1px;
+
+	transition: all 0.3s ease 0s;
+}
+
+.resume-link a:hover {
+	color: rgb(0, 0, 0);
+	font-weight: bold;
+	border-color: #c28aff;
+	background-color: #c28aff;
+	text-decoration: none;
+	// border-radius: 100%;
+}
