--- a/view/style.scss
+++ b/view/style.scss
@@ -977,5 +977,5 @@ figure.effect:hover p {
 	border-color: #c28aff;
 	background-color: #c28aff;
 	text-decoration: none;
-	// border-radius: 100%;
+	border-radius: 30px;
 }
