--- a/view/style.scss
+++ b/view/style.scss
@@ -340,56 +340,56 @@ hr { margin: 40px 0px; border-color: #727878; opacity: 0.2; filter:alpha(opacity
 	#interests .interest-content { padding: 20px 0px; }
 }
 
-@media (max-width: 767px) { 
-	.jumbotron:before {
-		bottom: 100px;
-		left: 20px;
-		right: 20px;
-		top: 20px;		
-	}
-	.jumbotron .container { top: 20%; padding-top: 0px; }
-	.jumbotron .scroll-down { width: 100%; right: 0px; }
+// @media (max-width: 767px) { 
+// 	.jumbotron:before {
+// 		bottom: 100px;
+// 		left: 20px;
+// 		right: 20px;
+// 		top: 20px;		
+// 	}
+// 	.jumbotron .container { top: 20%; padding-top: 0px; }
+// 	.jumbotron .scroll-down { width: 100%; right: 0px; }
 	
-	.navbar  { left: 0px; width: 100%; }
-	.navbar .nav > li { height: 60px; }
-	.navbar .nav > li a { height: 60px; text-align: center; padding-top: 20px; font-weight: 600; color: #FFFFFF; }
+// 	.navbar  { left: 0px; width: 100%; }
+// 	.navbar .nav > li { height: 60px; }
+// 	.navbar .nav > li a { height: 60px; text-align: center; padding-top: 20px; font-weight: 600; color: #FFFFFF; }
 	
-	.fixed .navbar { top: 0px; }
+// 	.fixed .navbar { top: 0px; }
 	
-	.container { padding: 60px 20px; min-width: 280px; }
-	.hidden-phone { display: none; }
+// 	.container { padding: 60px 20px; min-width: 280px; }
+// 	.hidden-phone { display: none; }
 	
-	#profile .row * { text-align: center; }
+// 	#profile .row * { text-align: center; }
 	
-	#experiences .experience .experience-details > span { display: block; margin-bottom: 6px; }
-	#experiences .experience .experience-details .seperator { display: none; }
+// 	#experiences .experience .experience-details > span { display: block; margin-bottom: 6px; }
+// 	#experiences .experience .experience-details .seperator { display: none; }
 	
-	#interests .left { float: none; }
-	#interests .right { float: none; }
+// 	#interests .left { float: none; }
+// 	#interests .right { float: none; }
 	
-	#interests > * { text-align: center; }
-	#interests img { width: 50%; height: auto; float: none !important; } 
-	#interests .interest-content { padding: 20px 0px; }
+// 	#interests > * { text-align: center; }
+// 	#interests img { width: 50%; height: auto; float: none !important; } 
+// 	#interests .interest-content { padding: 20px 0px; }
 	
-	#contact { padding-bottom: 60px; }
-	#contact a .icon { float: left; margin-right: 10px; }
-}    
+// 	#contact { padding-bottom: 60px; }
+// 	#contact a .icon { float: left; margin-right: 10px; }
+// }    
 
-@media only screen and (orientation: portrait) and (max-width: 767px)  {
-    .jumbotron {
-      -webkit-background-size: auto 150%;
-      background-attachment: scroll;
-    }
-}
-@media only screen and (orientation: landscape) and (max-width: 767px)  {
+// @media only screen and (orientation: portrait) and (max-width: 767px)  {
+//     .jumbotron {
+//       -webkit-background-size: auto 150%;
+//       background-attachment: scroll;
+//     }
+// }
+// @media only screen and (orientation: landscape) and (max-width: 767px)  {
 
-    .jumbotron {
-      -webkit-background-size: 150% auto;
-      background-attachment: scroll;
-    }
+//     .jumbotron {
+//       -webkit-background-size: 150% auto;
+//       background-attachment: scroll;
+//     }
 	
-	.jumbotron .lead { display: none; }
-}
+// 	.jumbotron .lead { display: none; }
+// }
 
 @keyframes wiggle {
 	0% {
