--- a/view/style.css
+++ b/view/style.css
@@ -313,6 +313,15 @@ hr {
   padding-top: 25px;
 }
 
+.jumbotron a img {
+  width: 50px;
+  display: block;
+  float: left;
+  margin: 50px;
+  z-index: 100;
+  position: absolute;
+}
+
 .shadow {
   -webkit-box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
           box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.3), 0 6px 20px 0 rgba(0, 0, 0, 0.3);
@@ -629,6 +638,123 @@ hr {
   }
 }
 
+@media (max-width: 767px) {
+  .jumbotron:before {
+    bottom: 100px;
+    left: 20px;
+    right: 20px;
+    top: 20px;
+  }
+  .jumbotron .container {
+    top: 20%;
+    padding-top: 0px;
+  }
+  .jumbotron .scroll-down {
+    width: 100%;
+    right: 0px;
+  }
+  .navbar {
+    left: 0px;
+    width: 100%;
+  }
+  .navbar .nav > li {
+    height: 60px;
+  }
+  .navbar .nav > li a {
+    height: 60px;
+    text-align: center;
+    padding-top: 20px;
+    font-weight: 600;
+    color: #FFFFFF;
+  }
+  .fixed .navbar {
+    top: 0px;
+  }
+  .container {
+    padding: 60px 20px;
+    min-width: 280px;
+  }
+  .hidden-phone {
+    display: none;
+  }
+  #profile .row * {
+    text-align: center;
+  }
+  #experiences .experience .experience-details > span {
+    display: block;
+    margin-bottom: 6px;
+  }
+  #experiences .experience .experience-details .seperator {
+    display: none;
+  }
+  #interests .left {
+    float: none;
+  }
+  #interests .right {
+    float: none;
+  }
+  #interests > * {
+    text-align: center;
+  }
+  #interests img {
+    width: 50%;
+    height: auto;
+    float: none !important;
+  }
+  #interests .interest-content {
+    padding: 20px 0px;
+  }
+  #contact {
+    padding-bottom: 60px;
+  }
+  #contact a .icon {
+    float: left;
+    margin-right: 10px;
+  }
+  .hamburger-menu {
+    width: 17.5px;
+    height: 15px;
+  }
+  .change .line-1 {
+    -webkit-transform: rotateZ(-405deg) translate(-4px, 3px);
+            transform: rotateZ(-405deg) translate(-4px, 3px);
+  }
+  .change .line-3 {
+    -webkit-transform: rotateZ(405deg) translate(-4px, -3px);
+            transform: rotateZ(405deg) translate(-4px, -3px);
+  }
+  .navbarBar {
+    width: 50%;
+    right: -50%;
+  }
+  .jumbotron a img {
+    width: 25px;
+  }
+  .words span {
+    font-size: 0px;
+  }
+  .wordAtt {
+    width: 0px;
+  }
+}
+
+@media only screen and (orientation: portrait) and (max-width: 767px) {
+  .jumbotron {
+    -webkit-background-size: auto 150%;
+    background-attachment: scroll;
+  }
+}
+
+@media only screen and (orientation: landscape) and (max-width: 767px) {
+  .jumbotron {
+    -webkit-background-size: 150% auto;
+    background-attachment: scroll;
+  }
+  .jumbotron .lead {
+    display: none;
+  }
+}
+
 @-webkit-keyframes wiggle {
   0% {
     padding-top: 20px;
@@ -861,6 +987,13 @@ figure.effect:hover p {
   display: inline-block;
   -webkit-animation: move 2s ease-in-out infinite;
           animation: move 2s ease-in-out infinite;
+}
+
+.wordAtt {
+  font-weight: bold;
+  width: 30%;
+  margin: 0%;
+  display: inline;
 }
 
 @-webkit-keyframes move {
@@ -1358,6 +1491,11 @@ figure.effect:hover p {
   margin-top: 50px;
   margin-left: auto;
   margin-right: auto;
+  display: inline;
+  z-index: 100;
+  position: absolute;
+  bottom: 40px;
+  right: 40px;
 }
 
 .resume-link a {
