--- a/view/style.scss
+++ b/view/style.scss
@@ -985,9 +985,15 @@ figure.effect:hover p {
 
 .titleText {
 	font-family: 'Montserrat', sans-serif; 
+	font-size: 1vw; 
+	text-transform: uppercase; 
+	font-weight: bold;
+}
+
+.jumbotron .overlay .container h1 {
+	font-family: 'Montserrat', sans-serif; 
 	font-size: 8vw; 
-	text-transform: 
-	uppercase; 
+	text-transform: uppercase; 
 	font-weight: bold;
 }
 
@@ -1007,6 +1013,12 @@ figure.effect:hover p {
 	}
 	.jumbotron .container { top: 20%; padding-top: 0px;}
 	.jumbotron .scroll-down { width: 100%; right: 0px; }
+	.jumbotron .overlay .container h1 {
+		font-family: 'Montserrat', sans-serif; 
+		font-size: 11vw; 
+		text-transform: uppercase; 
+		font-weight: bold;
+	}
 	
 	.navbar  { left: 0px; width: 100%; }
 	.navbar .nav > li { height: 60px; }
