change media stuff and title 3

--- a/view/style.scss
+++ b/view/style.scss
@@ -59,7 +59,7 @@ h3 { font-size: 28px; }
 .colorPrint {
 	color: transparent;
 	/* background-image: linear-gradient(to right , #f00,rgb(255, 123, 0),#ff0,#0f0,#0ff,#00f,rgb(204, 0, 255),rgb(255, 0, 200),#f00,rgb(255, 123, 0)); */
-	background-image: linear-gradient(to right, #e600ff, #bf00ff, #8400ff, #1900ff, #008cff, #00e5ff, #e600ff, #bf00ff);
+	background-image: linear-gradient(to right, #c28aff, #bf00ff, #8400ff, #47159d, #1900ff, #008cff, #00e5ff, #c28aff, #bf00ff);
 	-webkit-background-clip: text;
 	
 	-webkit-text-fill-color: transparent;
