--- a/view/style.css
+++ b/view/style.css
@@ -81,8 +81,8 @@ h3 {
 .colorPrint {
   color: transparent;
   /* background-image: linear-gradient(to right , #f00,rgb(255, 123, 0),#ff0,#0f0,#0ff,#00f,rgb(204, 0, 255),rgb(255, 0, 200),#f00,rgb(255, 123, 0)); */
-  background-image: -webkit-gradient(linear, left top, right top, from(#e600ff), color-stop(#bf00ff), color-stop(#8400ff), color-stop(#1900ff), color-stop(#008cff), color-stop(#00e5ff), color-stop(#e600ff), to(#bf00ff));
-  background-image: linear-gradient(to right, #e600ff, #bf00ff, #8400ff, #1900ff, #008cff, #00e5ff, #e600ff, #bf00ff);
+  background-image: -webkit-gradient(linear, left top, right top, from(#c28aff), color-stop(#bf00ff), color-stop(#8400ff), color-stop(#47159d), color-stop(#1900ff), color-stop(#008cff), color-stop(#00e5ff), color-stop(#c28aff), to(#bf00ff));
+  background-image: linear-gradient(to right, #c28aff, #bf00ff, #8400ff, #47159d, #1900ff, #008cff, #00e5ff, #c28aff, #bf00ff);
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   -webkit-animation: animate 8s linear infinite;
