scroll background fixed project back

--- a/view/style.scss
+++ b/view/style.scss
@@ -1105,15 +1105,25 @@ figure.effect:hover p {
 @media only screen and (orientation: portrait) and (max-width: 767px)  {
     .jumbotron {
       -webkit-background-size: auto 150%;
-      background-attachment: scroll;
-    }
+    //   background-attachment: scroll;
+	}
+	
+	.projectBack {
+		-webkit-background-size: auto 150%;
+      	// background-attachment: scroll;
+	}
 }
 @media only screen and (orientation: landscape) and (max-width: 767px)  {
 
     .jumbotron {
       -webkit-background-size: 150% auto;
-      background-attachment: scroll;
+    //   background-attachment: scroll;
     }
 	
 	.jumbotron .lead { display: none; }
+
+	.projectBack {
+		-webkit-background-size: auto 150%;
+      	// background-attachment: scroll;
+	}
 }
