--- a/view/style.css
+++ b/view/style.css
@@ -1583,17 +1583,21 @@ figure.effect:hover p {
 @media only screen and (orientation: portrait) and (max-width: 767px) {
   .jumbotron {
     -webkit-background-size: auto 150%;
-    background-attachment: scroll;
+  }
+  .projectBack {
+    -webkit-background-size: auto 150%;
   }
 }
 
 @media only screen and (orientation: landscape) and (max-width: 767px) {
   .jumbotron {
     -webkit-background-size: 150% auto;
-    background-attachment: scroll;
   }
   .jumbotron .lead {
     display: none;
+  }
+  .projectBack {
+    -webkit-background-size: auto 150%;
   }
 }
 /*# sourceMappingURL=style.css.map */
