scroll background fixed project back

--- a/view/style.scss
+++ b/view/style.scss
@@ -1060,6 +1060,10 @@ figure.effect:hover p {
 		top: 25px;
 		right: 25px;
 	}
+
+	.line {
+		height: 1.5px;
+	}
 	
 	.change .line-1 {
 		transform: rotateZ(-405deg) translate(-4px, 3px);
