--- a/view/style.css
+++ b/view/style.css
@@ -1537,6 +1537,9 @@ figure.effect:hover p {
     top: 25px;
     right: 25px;
   }
+  .line {
+    height: 1.5px;
+  }
   .change .line-1 {
     -webkit-transform: rotateZ(-405deg) translate(-4px, 3px);
             transform: rotateZ(-405deg) translate(-4px, 3px);
