scroll background fixed project back

--- a/view/style.css
+++ b/view/style.css
@@ -1586,6 +1586,7 @@ figure.effect:hover p {
 @media only screen and (orientation: portrait) and (max-width: 767px) {
   .jumbotron {
     -webkit-background-size: auto 150%;
+    background-attachment: scroll;
   }
   .projectBack {
     -webkit-background-size: auto 150%;
@@ -1595,6 +1596,7 @@ figure.effect:hover p {
 @media only screen and (orientation: landscape) and (max-width: 767px) {
   .jumbotron {
     -webkit-background-size: 150% auto;
+    background-attachment: scroll;
   }
   .jumbotron .lead {
     display: none;
